Fix when click definition the page will jump back to top

--- a/nclient/src/assets/css/main.scss
+++ b/nclient/src/assets/css/main.scss
@@ -312,3 +312,7 @@ input[type="text"] {
 .flex-fill {
   flex: 1;
 }
+
+.opacity-0{
+  opacity: 0;
+}
